Home/WhatWeDO/Contact is ready to review

--- a/whatwedo.html
+++ b/whatwedo.html
@@ -36,7 +36,7 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="whatwedo-header px-3">
+    <section class="whatwedo-header px-4 px-lg-0">
 
         <nav class="header-nav navbar navbar-expand-lg navbar-dark">
             <div class="container">
@@ -46,7 +46,7 @@
                 <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon "></span>
+                    <i class="fas fa-bars px-0"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
@@ -86,7 +86,7 @@
     </section>
     <!-- Section Header end  -->
     <!-- Section details start  -->
-    <section class="whatwedo-section-1 px-3">
+    <section class="whatwedo-section-1 px-4 px-lg-0">
         <div class="container mb-4">
             <div class="row ">
                 <div class="col-12 col-lg-5">
@@ -99,15 +99,15 @@
                     </h2>
                 </div>
                 <div class="col-12 col-lg-7">
-                    <p class="text-blue mb-4 fw-light">
+                    <p class="text-blue mb-4">
                         Our consultancy uncovers the issues that are slowing your process and resolves
                         them with sofware solutions.
                     </p>
-                    <p class="text-blue mb-4 fw-light">
+                    <p class="text-blue mb-4">
                         We believe in the power of technology to transform your business - but we don't in using
                         technology for technology's sake.
                     </p>
-                    <p class="text-blue mb-0 fw-light">
+                    <p class="text-blue mb-0">
                         What we recommend will work - whether the solution is buying a system already on the market,
                         building a bespoke app or rebuilding (embedded links to services) what you already have.
                         Because SMEs deserve systems that work brillintly today and will work even better tomorrow.
@@ -156,7 +156,7 @@
             </div>
         </div>
     </section>
-    <section class="whatwedo-section-2 bg-light-grey px-3">
+    <section class="whatwedo-section-2 bg-light-grey px-4 px-lg-0">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 d-flex justify-content-center">
@@ -166,19 +166,19 @@
                     <h3 class="text-blue fw-bold mb-5">
                         Getting your software systems to talk to each other
                     </h3>
-                    <p class="text-blue mb-4 fw-light">
+                    <p class="text-blue mb-4">
                         Did you know that the average organisation uses a minimum of five software systems?
                         Software is integral to the way we do business, yet it can feel as though the systems are
                         slowing things down, not speeding them up. They just don't 'talk' to each other. The
                         technical team calls it systems alignment - but put simply it's your fast track to a more
                         successful business.
                     </p>
-                    <p class="text-blue mb-4 fw-light">
+                    <p class="text-blue mb-4">
                         Getting software systems to talk to each other is as importent as getting people to
                         communicate properly. Better communication between your systems means fewer mistakes
                         and a faster, smoother workflow.
                     </p>
-                    <p class="text-blue mb-4 fw-light">
+                    <p class="text-blue mb-4">
                         Plus, it frees up your people to work on more intresting things like the next brilliant idea.
                     </p>
                     <button class="btn bg-orange text-white text-uppercase btn-book-call rounded-0 fw-bold py-3 px-5">
@@ -188,7 +188,7 @@
             </div>
         </div>
     </section>
-    <section class="whatwedo-section-3 px-3">
+    <section class="whatwedo-section-3 px-4 px-lg-0">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 d-flex justify-content-center">
@@ -198,12 +198,12 @@
                     <h3 class="text-blue fw-bold mb-5">
                         Building software that suits your business
                     </h3>
-                    <p class="text-blue mb-4 fw-light">
+                    <p class="text-blue mb-4">
                         We want to make your systems work hard for your budget, so we'll always look to see
                         what've already available on the market. But if the bes system for your business
                         doesn't exist yet, we will build it.
                     </p>
-                    <p class="text-blue mb-4 fw-light">
+                    <p class="text-blue mb-4">
                         As leading software developers, we specialise in customised software solutions for our clients.
                         Our technical development team build bespoke applications that fit your business, and nobody
                         else's
@@ -215,28 +215,28 @@
             </div>
         </div>
     </section>
-    <section class="whatwedo-section-4 bg-light-grey px-3">
+    <section class="whatwedo-section-4 bg-light-grey px-4 px-lg-0">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 d-flex justify-content-center">
-                    <img src="./assets/Icon images/Move_icon.png" alt="move" class="software-icon mb-4 mb-lg-0">
+                    <img src="./assets/Icon images/move-light.PNG" alt="move" class="software-icon mb-4 mb-lg-0">
                 </div>
                 <div class="col-12 col-lg-7">
                     <h3 class="text-blue fw-bold mb-5">
                         When you need to move your data
                     </h3>
-                    <p class="text-blue mb-4 fw-light">
+                    <p class="text-blue mb-4">
                         Whether it's your inhouse emails or your customes database, your data is your most
                         valuable asset. As your business grows, you will want to use your data for different purposes
                         or upgrade to a more sophisticates system.
                     </p>
-                    <p class="text-blue mb-4 fw-light">
+                    <p class="text-blue mb-4">
                         When the time comes to move your data from one system to another - or
                         <span class="fw-bold text-decoration-underline">migrate it</span>)
                         as it is often known - you want to be certain that every record arrives in the same condition
                         that every record arrives in the same condition that it left - complete and uncorrupted
                     </p>
-                    <p class="text-blue mb-4 fw-light">
+                    <p class="text-blue mb-4">
                         We have 20 years' experience in shifting data safely, so we know what we're doing. In addition,
                         if you wish,
                         <span class="fw-bold text-decoration-underline">
@@ -251,7 +251,7 @@
             </div>
         </div>
     </section>
-    <section class="whatwedo-section-5 px-3">
+    <section class="whatwedo-section-5 px-4 px-lg-0">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 d-flex justify-content-center">
@@ -289,11 +289,11 @@
     <!-- Section details end  -->
 
     <!-- Section Contact start -->
-    <section class="section-contact px-3">
+    <section class="section-contact px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-7 d-none d-lg-block">
-                    <h3 class="text-blue fw-bold mb-3 ">
+                    <h3 class="text-blue fw-bold mb-3">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </h3>
                     <h3 class="text-white fw-bolder lh-1 mb-0">
@@ -302,7 +302,7 @@
                     </h3>
                 </div>
                 <div class="col-md-7 d-block d-lg-none">
-                    <h3 class="text-blue mb-0 ">
+                    <h3 class="text-blue mb-2">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </h3>
                     <h3 class="text-blue fw-bolder lh-1 mb-0">
@@ -316,7 +316,7 @@
     <!-- Section Contact end -->
 
     <!-- Footer start  -->
-    <footer class="footer bg-blue py-5 px-3 px-lg-0">
+    <footer class="footer bg-blue py-5 px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
