--- a/contact.html
+++ b/contact.html
@@ -36,17 +36,17 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="contact-header px-3">
+    <section class="contact-header px-4 px-lg-0">
 
         <nav class="header-nav navbar navbar-expand-lg navbar-dark">
-            <div class="container">
+            <div class="container px-0 px-lg-2">
                 <a class="navbar-brand me-0" href="home.html">
                     <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
                 </a>
                 <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon "></span>
+                    <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
@@ -68,60 +68,61 @@
                 </div>
             </div>
         </nav>
-        <div class="contact-header-content container text-white py-4 px-0">
-            <div class="row">
-                <div class='col-12 col-md-6'>
-                    <p class="d-block d-md-none text-white fw-bolder">Contact us</p>
-                </div>
-            </div>
+        <div class="contact-header-contenttext-white py-4">
+            <p class="d-block d-md-none text-white fw-bolder">Contact us</p>
+
+
         </div>
     </section>
     <!-- Section Header end  -->
 
-    <section class="py-4 p-md-5 px-3">
-        <form>
+    <section class="py-4 p-md-5 px-4 px-lg-0">
+        <form class="contact-page-form">
             <div class="container p-0">
                 <h3 class="text-blue fw-bold mb-4">Arrange an inital, no obligation chat.</h3>
-                <p class="fw-light text-blue">
+                <p class="text-blue d-none d-lg-block">
                     Fields marked with an <span class="text-danger">*</span> are required
                 </p>
-                <div class="row">
+                <div class="row mb-0 mb-lg-5">
                     <div class="col-12 col-lg-6">
                         <label for="name" class="form-label text-blue">
                             Name
                             <span class=" text-danger">*</span>
                         </label>
-                        <input type="text" class="form-control rounded-0" id="name">
+                        <input type="text" class="form-control rounded-0 mb-5 mb-lg-0" id="name">
                     </div>
                     <div class="col-12 col-lg-6">
                         <label for="company" class="form-label text-blue">
                             Company
                             <span class="text-danger">*</span>
                         </label>
-                        <input type="text" class="form-control rounded-0" id="company">
+                        <input type="text" class="form-control rounded-0 mb-5 mb-lg-0" id="company">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mb-0 mb-lg-5">
                     <div class="col-12 col-lg-6">
                         <label for="email" class="form-label text-blue">
                             Email
                             <span class=" text-danger">*</span>
                         </label>
-                        <input type="email" class="form-control rounded-0" id="email">
+                        <input type="email" class="form-control rounded-0 mb-5 mb-lg-0" id="email">
                     </div>
                     <div class="col-12 col-lg-6">
                         <label for="contact-number" class="form-label text-blue">
                             Contact Number
                             <span class="text-danger">*</span>
                         </label>
-                        <input type="text" class="form-control rounded-0" id="contact-number">
+                        <input type="text" class="form-control rounded-0 mb-5 mb-lg-0" id="contact-number">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
                         <label for="message" class="form-label text-blue">Message</label>
-                        <textarea class="form-control rounded-0" id="message" rows="5"></textarea>
+                        <textarea class="form-control rounded-0 mb-5 mb-lg-0" id="message" rows="10"></textarea>
                     </div>
+                    <p class="text-blue d-block d-lg-none">
+                        Fields marked with an <span class="text-danger">*</span> are required
+                    </p>
                 </div>
                 <div class="d-flex flex-column flex-lg-row justify-content-between pt-5">
                     <div>
@@ -151,11 +152,11 @@
     </section>
 
     <!-- Section Contact start -->
-    <section class="section-contact px-3">
+    <section class="section-contact px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-7 d-none d-lg-block">
-                    <h3 class="text-blue fw-bold mb-3 ">
+                    <h3 class="text-blue fw-bold mb-3">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </h3>
                     <h3 class="text-white fw-bolder lh-1 mb-0">
@@ -164,7 +165,7 @@
                     </h3>
                 </div>
                 <div class="col-md-7 d-block d-lg-none">
-                    <h3 class="text-blue mb-0 ">
+                    <h3 class="text-blue mb-2">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </h3>
                     <h3 class="text-blue fw-bolder lh-1 mb-0">
